--- a/src/main/resources/templates/infrastructure/repository.mustache
+++ b/src/main/resources/templates/infrastructure/repository.mustache
@@ -13,7 +13,7 @@ import java.util.List;
 import java.util.Optional;
 
 @Repository
-public interface {{entityName}}Repository extends JpaRepository<{{entityName}}, String> {
+public interface {{name}}Repository extends JpaRepository<{{entityName}}, String> {
 
 	@Query("SELECT t FROM {{entityName}} t ")
 	Page<{{entityName}}> findAll(Pageable pageable);
