--- a/src/main/resources/templates/infrastructure/security/userPrincipal.mustache
+++ b/src/main/resources/templates/infrastructure/security/userPrincipal.mustache
@@ -17,7 +17,7 @@ import java.util.stream.Collectors;
 @AllArgsConstructor
 public class UserPrincipal implements UserDetails, IdentifiableUser {
 
-private final User user;
+private final CustomUser user;
 
 @Override
 public Collection<? extends GrantedAuthority> getAuthorities() {
@@ -92,5 +92,12 @@ public Set<String> getRoles() {
 	return user.getTenant().getId();
 	}
 	{{/isMultiTenant}}
+
+	public String getCreatedBy() {
+		if (user == null)
+			return null;
+
+		return user.getCreatedBy().getId();
+	}
 }
 
